--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-css": "node-sass assets/stylesheets/style.scss -o public/stylesheets -w",
     "build-bundle": "webpack -w",
-    "start": "nodemon server.js"
+    "start": "nodemon ./server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +19,10 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
-    "redux": "^3.7.0"
+    "redux": "^3.7.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "babel": "^6.23.0",
