--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-css": "node-sass assets/stylesheets/style.scss -o public/stylesheets -w",
     "build-bundle": "webpack -w",
-    "start": "nodemon ./server/index.js"
+    "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "redux": "^3.7.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
