--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build-css": "node-sass assets/stylesheets/style.scss -o public/stylesheets -w",
-    "build-bundle": "webpack -w",
-    "start": "nodemon server.js"
+    "build-bundle": "./node_modules/webpack/bin/webpack.js -w",
+    "start": "nodemon ./server/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +18,12 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^3.0.5",
-    "redux": "^3.7.0"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.3",
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
