--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
+    "redux-socket.io": "^1.4.0",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "webpack": "^3.1.0"
   },
   "devDependencies": {
