--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     "one-var": 0,
-    "one-var-declaration-per-line": 0
+    "one-var-declaration-per-line": 0,
+    "no-param-reassign": 0
   }
 }
