--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "react/jsx-filename-extension": 0,
     "one-var": 0,
     "one-var-declaration-per-line": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "arrow-parens": 0
   }
 }
