--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "no-param-reassign": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "no-nested-ternary": 0
   }
 }
