--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-socket.io": "^1.4.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
+    "underscore": "^1.8.3",
     "webpack": "^3.1.0"
   },
   "devDependencies": {
