--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,12 @@
   ],
   "rules": {
     "react/jsx-filename-extension": 0,
+    "react/jsx-first-prop-new-line": 0,
+    "react/jsx-max-props-per-line": 0,
     "one-var": 0,
     "one-var-declaration-per-line": 0,
-    "no-param-reassign": 0,
     "arrow-parens": 0,
+    "no-param-reassign": 0,
     "no-nested-ternary": 0
   }
 }
